{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 17,
  "lineage": "b7d5c7b0-541a-7d98-708f-d05d9f747704",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03839f1dba75bb628",
            "arn": "arn:aws:ec2:us-west-2:514906446556:instance/i-00ebe9ed4b800d988",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00ebe9ed4b800d988",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-cli",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a7ed5339474b2c6c",
            "private_dns": "ip-10-0-1-123.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.123",
            "public_dns": "ec2-35-91-126-52.us-west-2.compute.amazonaws.com",
            "public_ip": "35.91.126.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-089c3254a86355b10",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04c27a9aa29f88b51"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04cb10a24df7e16b5",
            "tags": {
              "Name": "ec2_instance",
              "Project": "as2"
            },
            "tags_all": {
              "Name": "ec2_instance",
              "Project": "as2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04c27a9aa29f88b51"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg_1",
            "module.vpc.aws_subnet.sn_1",
            "module.vpc.aws_subnet.sn_2",
            "module.vpc.aws_vpc.vpc_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03839f1dba75bb628",
            "arn": "arn:aws:ec2:us-west-2:514906446556:instance/i-045f000b539ce00dc",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-045f000b539ce00dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-cli",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bd9b1410770d6d97",
            "private_dns": "ip-10-0-2-30.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.30",
            "public_dns": "ec2-35-93-224-141.us-west-2.compute.amazonaws.com",
            "public_ip": "35.93.224.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-043e393396cf08eb2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04c27a9aa29f88b51"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cf7a135de03c4267",
            "tags": {
              "Name": "ec2_instance",
              "Project": "as2"
            },
            "tags_all": {
              "Name": "ec2_instance",
              "Project": "as2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04c27a9aa29f88b51"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg_1",
            "module.vpc.aws_subnet.sn_1",
            "module.vpc.aws_subnet.sn_2",
            "module.vpc.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:514906446556:internet-gateway/igw-0cad6abede709ccb0",
            "id": "igw-0cad6abede709ccb0",
            "owner_id": "514906446556",
            "tags": {
              "Name": "gw_1",
              "Project": "as2"
            },
            "tags_all": {
              "Name": "gw_1",
              "Project": "as2"
            },
            "vpc_id": "vpc-06986ee1dacefd4d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:514906446556:route-table/rtb-0671ffdb6b2e77da2",
            "id": "rtb-0671ffdb6b2e77da2",
            "owner_id": "514906446556",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cad6abede709ccb0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_1",
              "Project": "as2"
            },
            "tags_all": {
              "Name": "rt_1",
              "Project": "as2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06986ee1dacefd4d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw_1",
            "module.vpc.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a547e4536b0b6750",
            "route_table_id": "rtb-0671ffdb6b2e77da2",
            "subnet_id": "subnet-04cb10a24df7e16b5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw_1",
            "module.vpc.aws_route_table.rt_1",
            "module.vpc.aws_subnet.sn_1",
            "module.vpc.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbedc687be4b75b5",
            "route_table_id": "rtb-0671ffdb6b2e77da2",
            "subnet_id": "subnet-0cf7a135de03c4267"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw_1",
            "module.vpc.aws_route_table.rt_1",
            "module.vpc.aws_subnet.sn_2",
            "module.vpc.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:514906446556:security-group/sg-04c27a9aa29f88b51",
            "description": "Allow http and ssh access to ec2.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c27a9aa29f88b51",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_1",
            "name_prefix": "",
            "owner_id": "514906446556",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06986ee1dacefd4d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:514906446556:subnet/subnet-04cb10a24df7e16b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cb10a24df7e16b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "514906446556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn_1",
              "Project": "as2"
            },
            "tags_all": {
              "Name": "sn_1",
              "Project": "as2"
            },
            "vpc_id": "vpc-06986ee1dacefd4d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:514906446556:subnet/subnet-0cf7a135de03c4267",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf7a135de03c4267",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "514906446556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn_2",
              "Project": "as2"
            },
            "tags_all": {
              "Name": "sn_2",
              "Project": "as2"
            },
            "vpc_id": "vpc-06986ee1dacefd4d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:514906446556:vpc/vpc-06986ee1dacefd4d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f7e27058518f51c2",
            "default_route_table_id": "rtb-0c5de058c6be09f44",
            "default_security_group_id": "sg-0509fd342d1367051",
            "dhcp_options_id": "dopt-09cdd3c310ce4d412",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06986ee1dacefd4d0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c5de058c6be09f44",
            "owner_id": "514906446556",
            "tags": {
              "Name": "vpc_1",
              "Project": "as2"
            },
            "tags_all": {
              "Name": "vpc_1",
              "Project": "as2"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_rule",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:514906446556:security-group-rule/sgr-038ba3e057d0406be",
            "cidr_ipv4": "0.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-038ba3e057d0406be",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04c27a9aa29f88b51",
            "security_group_rule_id": "sgr-038ba3e057d0406be",
            "tags": {
              "Name": "egress_rule",
              "Project": "as2"
            },
            "tags_all": {
              "Name": "egress_rule",
              "Project": "as2"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.sg_1",
            "module.vpc.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_ingress_rule",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:514906446556:security-group-rule/sgr-0210949968e9b219d",
            "cidr_ipv4": "0.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0210949968e9b219d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04c27a9aa29f88b51",
            "security_group_rule_id": "sgr-0210949968e9b219d",
            "tags": {
              "Name": "http_ingress_rule",
              "Project": "as2"
            },
            "tags_all": {
              "Name": "http_ingress_rule",
              "Project": "as2"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.sg_1",
            "module.vpc.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_ingress_rule",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:514906446556:security-group-rule/sgr-0d7bd9b8993a25299",
            "cidr_ipv4": "0.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0d7bd9b8993a25299",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04c27a9aa29f88b51",
            "security_group_rule_id": "sgr-0d7bd9b8993a25299",
            "tags": {
              "Name": "ssh_ingress_rule",
              "Project": "as2"
            },
            "tags_all": {
              "Name": "ssh_ingress_rule",
              "Project": "as2"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.sg_1",
            "module.vpc.aws_vpc.vpc_1"
          ]
        }
      ]
    }
  ]
}